<resources>
    <string name="app_name">LAN-Crew-App</string>
    <string name="hint_name">Name</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_username">Enter Valid Username</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_username_exists">Username Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_username_password">Wrong Username or Password</string>
    <string name="text_member">Already a member? Login</string>

    <string name="Dagsplan">Dagsplan</string>
    <string name="save_changes">Save changes</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="pick">Pick</string>
    <string name="bookwakeup">Book wakeup</string>
    <string name="booking_overview">Booking Overview</string>
    <string name="administrate">Administrate</string>
    <string name="create_hall">Create hall</string>
    <string name="edit_delete">Edit/Delete</string>
    <string name="deletehall">Delete</string>
    <string name="Hall_name">Hall name</string>
    <string name="Number_of_rows">Number of rows</string>
    <string name="Number_of_columns">Number of columns</string>
    <string name="edit_or_deletehall">Edit or delete</string>
    <string name="wake_up_details">Wake up details</string>
    <string name="time">Time:</string>
    <string name="Place">Place:</string>
    <string name="comment">Comment:</string>
    <string name="Poke">Poke</string>
    <string name="Delete_hall">Delete Hall</string>
    <string name="Choose_to_edit_or_delete">Choose to edit or delete</string>
    <string name="Accept">Accept</string>
    <string name="column">Column</string>
    <string name="row">Row</string>
    <string name="delete_wakeup">Delete wakeup</string>
    <string name="Kontakt">Kontakt</string>
    <string name="Vækning">Vækning</string>
    <string name="my_wakeup">My Wakeup</string>
    <string name="Beskeder">Beskeder</string>
    <string name="Vagtplan">Vagtplan</string>
    <string name="refresh">Refresh</string>
    <string name="schedule">Schedule</string>
    <string name="profileschedule">Schedule:</string>
    <string name="contact">Contacts</string>
    <string name="Create">Create</string>
    <string name="Title">Title: </string>
    <string name="main">Main Menu</string>
    <string name="wakeup">wake-up</string>
    <string name="message">Messages</string>
    <string name="headline1">When you call in Sick?</string>
    <string name="contactdesc1">When you are unable to work because of your own illness, which is not self-inflicted. Your employer may require documentation.</string>
    <string name="headline2">Call in sick immediately</string>
    <string name="contactdesc2">You must always call in sick as soon as possible.
If your employer has not set a specific time, you must call before your normal meeting time, preferably the day before.</string>
    <string name="headline3">Inform your crewleader</string>
    <string name="contactdesc3">You have to tell which tasks you are not able to perform because of your illness and how long you expect it to last.</string>
    <string name="headline4">Contact Info</string>
    <string name="Profileheadline">Profile</string>
    <string name="text_finish_registration">Finish Registration</string>
    <string name="hint_age">Age</string>
    <string name="hint_nickname">Nickname</string>
    <string name="hint_phone_number">Phone Number</string>
</resources>